catkin_ws/logs/backend/build.make.047.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: In function ‘int main()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:106:16: error: ‘frontend’ was not declared in this scope
   int toNode = frontend.getNewNode(frame, tm, im);
                ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: At global scope:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:59:13: warning: ‘void logPoseGraphNode(const SLAM::Frame&, const Isometry3d&)’ defined but not used [-Wunused-function]
 static void logPoseGraphNode(const Frame& frame, const Eigen::Isometry3d& pose)
             ^
make[2]: *** [CMakeFiles/backend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/backend.dir/all] Error 2
make: *** [all] Error 2
